--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 * {
   transition: all 0.3s ease-in-out;
 }
+
 body {
   background-color: #fff;
   color: #000;
   font-family: "Raleway", arial, sans-serif;
   font-size: 1em;
-  margin : 0
+  margin: 0
 }
 
 header {
   margin: 0 40px 0 40px;
-
 }
 
 .header {
@@ -39,9 +39,11 @@ header {
   background-color: #fff;
   color: #000;
 }
+
 .header a.subscribe {
   font-weight: bold;
 }
+
 .header a.active {
   border-top: solid #0065fc;
   color: #000;
@@ -50,7 +52,6 @@ header {
 .header-right {
   float: right;
 }
-
 
 h1 {
   font-size: 16px;
@@ -65,8 +66,8 @@ h1 {
 
 .search-section {
   margin: 0 40px 0 40px;
-
 }
+
 .search {
   display: flex;
 }
@@ -111,10 +112,9 @@ i.fa-search {
   margin-top: 20px;
   margin-bottom: 20px;
   font-weight: 900;
-
 }
 
-.btn{
+.btn {
   background-color: #fff;
   border: 2px solid #f2f2f2;
   border-radius: 60px;
@@ -131,6 +131,7 @@ i.fa-search {
   animation: MoveUpDown 1s linear infinite;
   background-color: #f2f2f2;
 }
+
 @keyframes MoveUpDown {
   0%, 100% {
     transform: translateY(0);
@@ -139,10 +140,8 @@ i.fa-search {
     transform: translateY(-10px);
   }
 }
-.fa-money-bill-wave,
-.fa-child,
-.fa-heart,
-.fa-dog {
+
+.fa-money-bill-wave, .fa-child, .fa-heart, .fa-dog {
   border: 1px solid #deebff;
   border-radius: 60px;
   color: #0065fc;
@@ -164,11 +163,9 @@ i.fa-search {
   margin: 0 10px 0 0;
 }
 
-
 .main-result {
   display: inline-flex;
   margin: 0 40px 50px 40px;
-
 }
 
 .main-section {
@@ -177,36 +174,30 @@ i.fa-search {
   border-radius: 20px;
   padding-top: 30px;
   margin: 0 20px 0 0;
-
 }
+
 .center {
   display: flex;
-
   justify-content: center;
   flex-wrap: wrap;
-  }
-  
-  
-  .card1 {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    border-radius: 20px;
-    width: 210px;
-    max-height: 100%;
-    padding: 5px;
-    margin: 10px;
-    background-color: #fff;
-  }
+}
 
+.card1 {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 20px;
+  width: 210px;
+  max-height: 100%;
+  padding: 5px;
+  margin: 10px;
+  background-color: #fff;
+}
 
 .result-title {
   font-size: 16px;
   font-weight: 900;
   margin: 10px 0 20px 40px;
-  
 }
-
-
 
 .card1 a {
   color: #000;
@@ -233,6 +224,7 @@ i.fa-search {
   margin: 10px 0 20px 25px;
   text-decoration: none;
 }
+
 .title-bottom:hover {
   color: #0065fc;
 }
@@ -249,13 +241,15 @@ i.fa-search {
   border-radius: 20px;
   margin: 0 0 0 20px;
 }
-.result-title-2{
+
+.result-title-2 {
   display: inline-flex;
   justify-content: space-between;
   font-weight: bold;
   align-items: center;
   position: relative;
 }
+
 .fa-chart-line {
   font-size: 1.3em;
   position: absolute;
@@ -284,12 +278,10 @@ i.fa-search {
 .fa-star {
   color: #d8d8d8;
 }
+
 .checked {
   color: #0065fc;
 }
-
-
-
 
 img.pics1 {
   border-radius: 20px 20px 0 0;
@@ -297,6 +289,7 @@ img.pics1 {
   height: 100px;
   object-fit: cover;
 }
+
 img.pics2 {
   border-radius: 20px 0 0 20px;
   width: 130px;
@@ -304,12 +297,14 @@ img.pics2 {
   object-fit: cover;
   padding: 0 10px 0 0;
 }
+
 img.pics3 {
   border-radius: 20px 20px 0 0;
   width: 100%;
   height: 300px;
   object-fit: cover;
 }
+
 img.pics4 {
   border-radius: 20px 20px 0 0;
   width: 100%;
@@ -324,12 +319,13 @@ img.pics4 {
   border-radius: 20px;
   font-weight: bolder;
   margin: 0 40px 0 40px;
-
 }
+
 .bottom-section a {
   text-decoration: none;
   color: #000;
 }
+
 .bottom-result {
   display: flex;
   flex-direction: row;
@@ -348,6 +344,7 @@ img.pics4 {
   margin: 15px 0 15px 0;
   background-color: #fff;
 }
+
 .activite-result-2 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
@@ -361,85 +358,67 @@ img.pics4 {
 
 .description-bottom {
   margin-left: 20px;
-  font-weight:bolder;
+  font-weight: bolder;
 }
+
 .bottom-title {
   font-weight: bolder;
   margin: 0 0 0 35px;
 }
 
-
-
-
-
-
-
-
-
-
-
 .footer-clean {
   margin: 50px 0 0 0;
-  padding:25px 20px 20px 0px;
+  padding: 25px 20px 20px 0px;
   background-color: #f2f2f2;
-  color:#000;
-
-  
+  color: #000;
 }
 
 .footer-clean h3 {
-  margin-top:0;
-  margin-bottom:12px;
-  font-weight:bold;
-  font-size:16px;
+  margin-top: 0;
+  margin-bottom: 12px;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 .footer-clean ul {
-  padding:0;
-  list-style:none;
-  line-height:2em;
-  font-size:14px;
-  margin-bottom:0;
+  padding: 0;
+  list-style: none;
+  line-height: 2em;
+  font-size: 14px;
+  margin-bottom: 0;
 }
 
 .footer-clean ul a {
-  color:inherit;
-  text-decoration:none;
-  opacity:0.8;
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
 }
 
 .footer-clean ul a:hover {
-  opacity:1;
+  opacity: 1;
 }
 
-.footer-container{
+.footer-container {
   display: inline-flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
   width: 100%;
 }
 
-
-
-
-
 @media screen and (max-width: 500px) {
-
-
   header {
     margin: 0;
   }
-header .logo {
-  margin: 20px 20px 0 20px;
-}
+  header .logo {
+    margin: 20px 20px 0 20px;
+  }
   .header a {
     padding: 12px 0 12px 0;
     font-size: 16px;
-  line-height: 40px;
+    line-height: 40px;
     float: none;
-    }
-  
+  }
   .header a.active {
     border-top: none;
     border-bottom: solid 4px #0065FC;
@@ -450,161 +429,196 @@ header .logo {
     border-bottom: solid 4px #f2f2f2;
     color: #000;
   }
-
-
   .header-right {
-    display: grid; 
-    grid-template-columns: 1fr 1fr; 
-    grid-template-rows: 1fr 1fr; 
-    gap: 0px 0px; 
-    grid-template-areas: 
-      ". subscribe"
-      "active activite"; 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 0px 0px;
+    grid-template-areas: ". subscribe" "active activite";
     margin: -60px 0 20px 0;
     width: 100%;
   }
-
-  .subscribe { grid-area: subscribe; 
-  margin: 0 0 0 50px}
-  .active { grid-area: active; }
-  .activite { grid-area: activite; }
-
- 
+  .subscribe {
+    grid-area: subscribe;
+    margin: 0 0 0 50px
+  }
+  .active {
+    grid-area: active;
+  }
+  .activite {
+    grid-area: activite;
+  }
   h1 {
     margin: 0 0 10px 20px;
     line-height: 1.5em;
   }
- p {
+  p {
     margin: 0 0 0 20px;
     line-height: 1.5em;
     font-size: 0.85em;
     margin-bottom: 30px;
   }
-
-.search-section {
-  display: block;
-  margin: 0 10px 0 10px;
-}
+  .search-section {
+    display: block;
+    margin: 0 10px 0 10px;
+  }
   .search {
-display: inline-flex; 
-margin: 0 10px 0 10px;
-}
-.searchButton {
-  border-radius: 15px;
-}
-span.text-rechercher {
-  display: none;
-}
-
-
-i.fa-search {
-  display: flex;
-}
-
-.fa-money-bill-wave, .fa-child, .fa-heart, .fa-dog {
-  margin: 0 4px 0 0;
-}
-
-.contenairbtn {
-  display: inline-block;
-  margin: 30px 0 30px 0;
-}
-.contenairbtn p  {
-  margin: 0;
-  color: #000;
-  font-weight: bolder;
-
-}
-.btn {
-  margin: 5px;
-  padding: 0 4px 0 0;
-}
-
-
-
-.main-result {
-  display: flex;
-  flex-flow: column-reverse wrap;
-  margin: 0;
-}
-
-.rightside {
-  background-color: #f2f2f2;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  padding: 30px 15px 0 15px;
-  border-radius: 0;
-  margin: 0;
-}
-.card2 {
-display: inline-flex;
-flex-wrap: wrap;
-width: auto;
-height: 100px;
-}
-img.pics2 { 
-  width: 100px;
-  height: 100px;
-}
-.result-title-2 h1{
+    display: inline-flex;
+    margin: 0 10px 0 10px;
+  }
+  .searchButton {
+    border-radius: 15px;
+  }
+  span.text-rechercher {
+    display: none;
+  }
+  i.fa-search {
+    display: flex;
+  }
+  .fa-money-bill-wave, .fa-child, .fa-heart, .fa-dog {
+    margin: 0 4px 0 0;
+  }
+  .contenairbtn {
+    display: inline-block;
+    margin: 30px 0 30px 0;
+  }
+  .contenairbtn p {
+    margin: 0;
+    color: #000;
+    font-weight: bolder;
+  }
+  .btn {
+    margin: 5px;
+    padding: 0 4px 0 0;
+  }
+  .main-result {
+    display: flex;
+    flex-flow: column-reverse wrap;
+    margin: 0;
+  }
+  .rightside {
+    background-color: #f2f2f2;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 30px 15px 0 15px;
+    border-radius: 0;
+    margin: 0;
+  }
+  .card2 {
+    display: inline-flex;
+    flex-wrap: wrap;
+    width: auto;
+    height: 100px;
+  }
+  img.pics2 {
+    width: 100px;
+    height: 100px;
+  }
+  .result-title-2 h1 {
+    font-size: 20px;
+    margin: 0 -10px 10px 0;
+    font-weight: bolder;
+  }
+  .result-title-2 {
+    display: inline-flex;
+    position: relative;
+  }
+  .fa-chart-line {
+    font-size: 1.3em;
+    position: absolute;
+    float: right;
+    margin: 0 50px 5px 0;
+  }
+  .room-container-2 h4 {
+    margin: 10px 0 5px 0;
+  }
+  .room-container-2 p {
+    margin: 0 0 15px 0;
+  }
+  .fa-star {
+    margin-top: 0;
+    font-size: 12px;
+  }
+  .main-section {
+    background-color: #fff;
+    max-width: 100%;
+    margin: 0;
+  }
+  h1.result-title {
+    font-size: 20px;
+    margin: 0 0 0 10px;
+    font-weight: bolder;
+  }
+  .center {
+    display: flex;
+  }
+  .card1 {
+    width: 100%;
+    height: auto;
+  }
+  .roomcontainer h4 {
+    margin: 10px 0 15px 0;
+  }
+  .roomcontainer p {
+    margin: 0;
+  }
+  .roomcontainer .fa-star {
+    margin-top: 5px;
+    font-size: 12px;
+  }
+  
+ h1.bottom-title { 
   font-size: 20px;
-  margin: 0 -10px 10px 0;
+  margin: 0 0 10px 25px;
   font-weight: bolder;
-}
-.result-title-2{
-  display: inline-flex;
-  position: relative;
-}
-.fa-chart-line {
-  font-size: 1.3em;
-  position: absolute;
-  float: right;
-  margin: 0 50px 5px 0;
-}
+ }
 
-.room-container-2 h4 {
-  margin: 10px 0 5px 0;
-}
+  .bottom-section {
+    margin: 40px 0;
+    padding: 0;
+  }
+ .bottom-result {
+   margin: 0 20px 0 20px;
+   display: flex;
+  }
+  .activite-result {
 
-.room-container-2 p {
-margin: 0 0 15px 0;
-}
+    width: 100%;
+    height: 140px;
+  }
+  img.pics3 {
+    width: 100%;
+    height: 100px;
+  }
+  .description-bottom {
+    font-weight: bolder;
+    margin-top: 5px;
+  }
 
-.fa-star {
-  margin-top: 0;
-  font-size: 12px;
-}
+  .activite-result-2 {
 
-.main-section{
-  background-color: #fff;
-  max-width: 100%;
-  margin: 0;
-}
+    width: 100%;
+    height: 140px;
+  }
+  img.pics4 {
+    width: 100%;
+    height: 100px;
+  }
+  .description-bottom {
+    font-weight: bolder;
+    margin-top: 5px;
+  }
 
-h1.result-title {
-  font-size: 20px;
-  margin: 0 0 0 10px;
-  font-weight: bolder;
-}
+  .footer-container {
+    display: inline-flex;
+    flex-flow: column wrap;
+    margin: 20px 0 20px 30px;
+    width: auto;
+  }
 
-
-.center {
-  display: flex;
-}
-
-.card1 {
-  width: 100%;
-  height: auto;
-}
-.roomcontainer h4{
-  margin: 10px 0 15px 0;
-}
-.roomcontainer p {
-  margin: 0;
-}
-.roomcontainer .fa-star{
-  margin-top: 5px;
-  font-size: 12px;
-}
+  .col-1, .col-2, .col-3 {
+    line-height: 10px;
+    margin: 20px 0 20px 0;
+  }
 }
