--- a/CSS/style-mobile.css
+++ b/CSS/style-mobile.css
@@ -127,6 +127,7 @@
         height: 120px;
     }
     .result-title-2 h2 {
+        display: block;
         font-size: 20px;
         margin: 0 -10px 10px 5px;
         font-weight: bolder;
