--- a/CSS/style-tabs.css
+++ b/CSS/style-tabs.css
@@ -1,17 +1,11 @@
 
-@media (max-width:501px) and (min-width:959px) {
-
+@media (max-width:959px) and (min-width: 501px) {
 
     /* Header */
 
     header {
-        margin: 0 40px 0 40px;
-    }
-
-    .header {
-        overflow: hidden;
-        background-color: #fff;
-        padding: 0;
+        width: 100%;
+        margin: 0 20px 0 20px;
     }
 
     .header a {
@@ -29,38 +23,6 @@
         height: auto;
     }
 
-    .header a:hover {
-        background-color: #fff;
-        color: #000;
-    }
-
-    .header a.subscribe {
-        font-weight: bold;
-    }
-
-    .header a.active {
-        border-top: solid #0065fc;
-        color: #000;
-    }
-
-    .header-right {
-        float: right;
-    }
-
-    h1 {
-        font-size: 16px;
-        font-weight: 900;
-    }
-    h2 {
-        font-size: 16px;
-        font-weight: 900;
-    }
-
-    h3 {
-        font-size: 16px;
-        font-weight: 900;
-    }
-
     /* Header */
 
 
@@ -68,204 +30,36 @@
     /* Bouton filtres */
 
     .contenairbtn {
-        margin-top: 20px;
-        margin-bottom: 20px;
-        font-weight: 900;
+       display: block;
     }
 
     .btn {
-        background-color: #fff;
-        border: 2px solid #f2f2f2;
-        border-radius: 60px;
-        color: #000;
-        padding: 0 20px 0 20px;
-        font-size: 16px;
-        font-weight: 600;
-        cursor: pointer;
-        margin: 0 15px 0 15px;
-        transition: all 0.2s ease-in-out;
-    }
-
-    .btn:hover {
-        animation: MoveUpDown 1s linear infinite;
-        background-color: #f2f2f2;
-    }
-
-    @keyframes MoveUpDown {
-        0%, 100% {
-            transform: translateY(0);
-        }
-        50% {
-            transform: translateY(-10px);
-        }
-    }
-
-    .fa-money-bill-wave, .fa-child, .fa-heart, .fa-dog {
-        border: 1px solid #deebff;
-        border-radius: 60px;
-        color: #0065fc;
-        padding: 15px;
-        margin: 0 10px 0 -25px;
-        background-color: #deebff;
-    }
-
-    .attention {
-        font-size: 14px;
-        margin-bottom: 40px;
-    }
-
-    .fa-info-circle {
-        background-color: #0065fc;
-        color: #fff;
-        border: 2px solid #f2f2f2;
-        border-radius: 40px;
-        margin: 0 10px 0 0;
+        margin: 5px 15px 5px 15px;
     }
 
     /* Bouton filtres */
 
-    /* Bloc résultat et Les plus populaire */
+      /* Bloc résultat et Les plus populaire */
 
-    .main-result {
-        display: flex;
-        flex-flow: column-reverse wrap;
-        margin: 0;
-    }
-    .rightside {
-        background-color: #f2f2f2;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        padding: 30px 15px 30px 15px;
-        border-radius: 0;
-        margin: 0;
-        align-content: center;
-    }
-    .card2 {
-        display: inline-flex;
-        flex-wrap: wrap;
-        width: 100%;
-        height: 120px;
-    }
-    img.pics2 {
-        width: 100px;
-        height: 120px;
-    }
-    .result-title-2 h2 {
-        font-size: 20px;
-        margin: 0 -10px 10px 5px;
-        font-weight: bolder;
-    }
-    .result-title-2 {
-        display: inline-flex;
-        position: relative;
-    }
-    .fa-chart-line {
-        font-size: 1.3em;
-        position: absolute;
-        float: right;
-        margin: 0 50px 5px 0;
-    }
-    .room-container-2 h4 {
-        margin: 10px 0 5px 0;
-    }
-    .room-container-2 p {
-        margin: 0 0 35px 0;
-    }
-    .main-section {
-        background-color: #fff;
-        max-width: 100%;
-        margin: 0;
-    }
-    h2.result-title {
-        font-size: 20px;
-        margin: 30px 0 10px 10px;
-        font-weight: bolder;
-    }
-    .center {
-        display: flex;
-    }
-    .card1 {
-        width: 100%;
-        height: auto;
-    }
-    .roomcontainer h4 {
-        margin: 10px 0 15px 0;
-    }
-    .roomcontainer p {
-        margin: 0;
-    }
-    .fa-star {
-        margin-top: 0;
-        font-size: 12px;
-    }
-    .roomcontainer .fa-star {
-        margin-top: 5px;
-        font-size: 12px;
-    }
-    /* Bloc résultat et Les plus populaire */
+.rightside {
+    display: block;
+    width: 100%;
 
-
-    /* Bloc Activités */
-
-    h3.bottom-title {
-        font-size: 20px;
-        margin: 0 0 10px 25px;
-        font-weight: bolder;
-    }
-    .bottom-section {
-        margin: 40px 0;
-        padding: 0;
-    }
-    .bottom-result {
-        margin: 0 20px 0 20px;
-        display: flex;
-    }
-    .activite-result {
-        width: 100%;
-        height: 140px;
-    }
-    img.pics3 {
-        width: 100%;
-        height: 100px;
-    }
-    .description-bottom {
-        font-weight: bolder;
-        margin-top: 5px;
-    }
-
-    .aresult-22 {
-        display:flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        width: 100%;
-    }
-    .activite-result-2 {
-        width: 100%;
-        height: 140px
-    }
-    img.pics4 {
-        width: 100%;
-        height: 100px;
-    }
-    .description-bottom {
-        font-weight: bolder;
-        margin-top: 5px;
-    }
-    /* Bloc Activités */
-
-    
-    /* Footer */
-    .footer-container {
-        display: inline-flex;
-        flex-flow: column wrap;
-        margin: 20px 0 20px 30px;
-        width: auto;
-    }
-    .col-1, .col-2, .col-3 {
-        line-height: 10px;
-        margin: 20px 0 20px 0;
-    }
+    height: 100%;
+}
+.main-result {
+    display: inline-flex;
+    width: 100%;
+    margin: 0 40px 50px 40px;
+}
+.result-title {
+    margin: 10px 0 20px 10px;
 }
 
-/* Footer */
+    /* Bloc résultat et Les plus populaire */
+
+.bottom-section {
+
+display: block;
+width: 100%;
+}
