--- a/CSS/style-main-result.css
+++ b/CSS/style-main-result.css
@@ -6,7 +6,7 @@
 }
 
 .main-section {
-    background-color: red;
+    background-color: #f2f2f2;
     max-width: 70%;
     border-radius: 20px;
     padding-top: 30px;
